--- a/css/navbar.css
+++ b/css/navbar.css
@@ -39,6 +39,7 @@ a {
 @media only screen and (max-width: 800px) {
   .navbar {
     background-color: transparent;
+    text-align: center;
   }
 
   .navbar .desktop-list {
@@ -58,5 +59,10 @@ a {
   }
   .mobile-list i {
     font-size: 30px;
+  }
+  .logo {
+    color: blueviolet;
+    font-size: 30px;
+    margin: auto;
   }
 }
