--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,7 +1,17 @@
 #categorie {
-  margin: 2vh 0;
+  margin: 4vh 0;
+  font-size: 20px;
 }
 
 #question {
+  width: 70%;
   margin-top: 10vh;
+  font-size: 40px;
+}
+
+@media only screen and (max-width: 800px) {
+  #question {
+    margin-top: 3vh;
+    font-size: 40px;
+  }
 }
