--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
@@ -14,4 +15,10 @@ body {
   align-items: center;
   flex-direction: column;
   text-align: center;
+}
+
+.ligne {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
