--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 body {
@@ -19,6 +18,11 @@ body {
 
 .ligne {
   display: flex;
-  justify-content: space-around;
   flex-direction: row;
+  justify-content: space-between;
+}
+
+.label {
+  margin: 20px 200px;
+  font-size: 30px;
 }
