--- a/css/profile.css
+++ b/css/profile.css
@@ -4,5 +4,17 @@ body {
 
 #profile-title {
   margin: 50px;
-  font-size: 50px;
+  font-size: 60px;
+}
+
+.label {
+  margin: 20px 100px;
+  font-size: 40px;
+}
+
+@media only screen and (max-width: 800px) {
+  .label {
+    margin: 20px 0px;
+    font-size: 30px;
+  }
 }
