--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,10 +1,17 @@
 body {
   overflow: hidden;
 }
+#main-div {
+  display: none;
+}
+
+#difficulty-tag {
+  font-size: 25px;
+}
 
 #categorie {
   margin: 4vh 0;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 #question {
