--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,10 @@
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+body {
+  top: 0px !important;
+}
+
 .icons-white {
   color: whitesmoke;
 }
