--- a/css/quiz.css
+++ b/css/quiz.css
@@ -31,9 +31,8 @@ body {
   border: none;
 }
 
-.quiz-button:hover {
-  transition: cubic-bezier(1, 0, 0, 1) 0.07s;
-
+.hoverScale-up:hover {
+  transition: cubic-bezier(1, 0, 0, 1) 0.1s;
   cursor: pointer;
   transform: scale(1.05);
 }
@@ -42,6 +41,33 @@ body {
   width: 100%;
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+.apply-shake {
+  animation: shake 0.62s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-2px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(3px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-5px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(5px, 0, 0);
+  }
 }
 
 @media only screen and (max-width: 800px) {
