--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,16 @@ body {
   background-color: #f7f7f7;
 }
 
+.hoverScale-up {
+  text-decoration: none;
+}
+
+.hoverScale-up:hover {
+  transition: ease-in-out 0.1s;
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
 .centered {
   display: flex;
   justify-content: center;
