--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,12 @@
   );
 }
 
+.small-title {
+  color: whitesmoke;
+  margin: 20px;
+  font-size: 35px;
+}
+
 .index-button {
   padding: 20px 0px;
   margin: 100px;
