--- a/css/sign-form.css
+++ b/css/sign-form.css
@@ -19,7 +19,7 @@
 
 .form-submit {
   padding: 20px 0px;
-  margin: 80px;
+  margin: 60px 0px 10px 0px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.8);
   color: blueviolet;
@@ -27,5 +27,10 @@
   width: 250px;
   outline: inherit;
   border: none;
+  text-decoration: none;
+}
+
+a {
+  color: whitesmoke;
   text-decoration: none;
 }
