--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,38 @@ body {
   width: 50%;
 }
 
+
+/* The alert message box */
+
+#alertBox{
+  visibility: hidden;
+}
+
+.alert {
+  width: 100%;
+  padding: 20px;
+  background-color: #f44336; /* Red */
+  color: white;
+  margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+}
+
 @media only screen and (max-width: 800px) {
   #loading-gif {
     top: 45%;
