--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,18 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Hubballi";
+  
+
+ 
+}
+
+.noselect{
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently*/
 }
 
 body {
@@ -101,5 +113,8 @@ body {
     top: 45%;
 
     width: 80%;
+  }
+  .alert {
+    padding: 10px;
   }
 }
