--- a/css/sign-form.css
+++ b/css/sign-form.css
@@ -9,6 +9,7 @@
 }
 
 .form-input {
+  white-space: nowrap;
   width: 300px;
   height: 30px;
   font-size: 20px;
@@ -34,3 +35,48 @@ a {
   color: whitesmoke;
   text-decoration: none;
 }
+
+.hideButton{
+  border: none;
+  background-color: transparent;
+  filter: brightness(0) invert(1);
+}
+.passInput{
+  margin-left: 41px;
+}
+
+.fa-eye{
+  margin-left: 10px;
+  color: whitesmoke;
+  font-size: 20px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .form-submit {
+    margin-top: 10px;
+  }
+  .logo-index{
+    font-size: 40px;
+  }
+
+}
+
+@media only screen and (max-width: 400px) {
+
+  .form-input {
+    width: 200px;
+    font-size: 20px;
+  }
+  .form-label {
+    font-size: 20px;
+  }
+  .form-submit{
+    width: 100px;
+    font-size: 20px;
+    padding: 10px;
+  }
+}
+
+
+
+
