--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,6 +1,6 @@
 #leaderboardTitle{
     margin: 30px 0px 30px 0px;
-    font-size: 45px;
+    font-size: 40px;
 }
 
 
@@ -57,7 +57,12 @@ tr.row>td {
     font-size: 1.5em;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
+
+    #leaderboardTitle{
+        font-size: 2em;
+    }
+    
     th{
         padding: 0px;
 
@@ -74,3 +79,20 @@ tr.row>td {
         font-size: 1em;
     }
 }
+
+  
+  @media only screen and (max-width: 400px) {
+  
+    .form-input {
+      width: 200px;
+      font-size: 20px;
+    }
+    .form-label {
+      font-size: 20px;
+    }
+    .form-submit{
+      width: 100px;
+      font-size: 20px;
+      padding: 10px;
+    }
+  }
