--- a/css/sign-form.css
+++ b/css/sign-form.css
@@ -41,6 +41,11 @@ a {
   background-color: transparent;
   filter: brightness(0) invert(1);
 }
+
+.hideButton:hover{
+  cursor: pointer;
+}
+
 .passInput{
   margin-left: 41px;
 }
@@ -50,6 +55,8 @@ a {
   color: whitesmoke;
   font-size: 20px;
 }
+
+
 
 @media only screen and (max-width: 1000px) {
   .form-submit {
