--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -57,14 +57,14 @@ tr.row>td {
     font-size: 1.5em;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
 
     #leaderboardTitle{
         font-size: 2em;
     }
     
-    th{
-        padding: 0px;
+    thead th{
+      padding: 10px;
 
     }
     table{
@@ -83,16 +83,23 @@ tr.row>td {
   
   @media only screen and (max-width: 400px) {
   
-    .form-input {
-      width: 200px;
-      font-size: 20px;
-    }
-    .form-label {
-      font-size: 20px;
-    }
-    .form-submit{
-      width: 100px;
-      font-size: 20px;
-      padding: 10px;
+    #leaderboardTitle{
+      font-size: 2em;
+  }
+  
+  thead th{
+    padding: 0px;
+
+  }
+  table{
+      width: 20%;
+  }
+  tr.row>td {
+      padding: 0.7em;
+  }
+  
+  .cell{
+      padding: 0em;
+      font-size: 1em;
     }
   }
