--- a/css/profile.css
+++ b/css/profile.css
@@ -47,6 +47,34 @@ body {
     flex-direction: column;
   }
   #elo-ligne{
-    margin-bottom: 30px;
+    margin-bottom: 0px;
   }
+}
+
+@media only screen and (max-width: 320px) {
+
+  #profileTitle {
+    font-size: 40px;
+  }
+
+  .logout-button {
+    width: 100px;
+    margin-bottom: 10px;
+  }
+  .label {
+    font-size: 25px;
+  }
+  .ligne{
+    margin: 0px;
+    flex-direction: column;
+  }
+
+  .ligne h2{
+    margin: 10px;
+  }
+
+  #elo-ligne{
+    margin-bottom: 0px;
+  }
+
 }
