--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -19,6 +19,7 @@ table{
     border-radius: 11px;
     border-collapse: separate;
     border-spacing: 0 0em;
+    margin-bottom: 20px;
 }
 
 thead{
