Username in login + remove google hover + pwa maybe ???

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,17 @@ body {
   background-color: #f7f7f7;
 }
 
+.goog-logo-link {
+  display:none !important;
+}
+
+.goog-te-gadget {
+  color: transparent !important;
+}
+
+.goog-te-gadget .goog-te-combo {
+  color: blue !important;
+}
 
 .include{
   width: 100%;
