--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,6 +1,7 @@
 #leaderboardTitle{
     margin: 30px 0px 30px 0px;
     font-size: 40px;
+    margin: 6vh 0px;
 }
 
 
@@ -18,7 +19,7 @@ table{
     border-radius: 11px;
     border-collapse: separate;
     border-spacing: 0 0em;
-    margin-bottom: 50px;
+    margin-bottom: 150px;
 }
 
 thead{
@@ -54,7 +55,7 @@ tr.row>td {
 }
 
 .cell{
-    font-size: 1.5em;
+    font-size: 1.6em;
 }
 
 @media only screen and (max-width: 800px) {
@@ -76,7 +77,7 @@ tr.row>td {
     
     .cell{
         padding: 0em;
-        font-size: 1em;
+        font-size: 0.8em;
     }
 }
 
@@ -100,6 +101,6 @@ tr.row>td {
   
   .cell{
       padding: 0em;
-      font-size: 1em;
+      font-size: 0.8em;
     }
   }
