--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,8 +12,8 @@ body {
 .logo {
   color: white;
   font-size: 40px;
-  margin-left: 100px;
   font-family: "Shizuru", cursive;
+  margin-left: 8%;
 }
 
 .navbar {
@@ -25,9 +25,12 @@ body {
 }
 
 a {
+  width: 100%;
   text-decoration: none;
   font-size: 30px;
+  
 }
+
 
 .navbar ul {
   flex: 1;
@@ -35,8 +38,9 @@ a {
 }
 
 .navbar ul li {
+  padding: 0px 5%;
+
   display: inline-block;
-  margin: 0 7vw;
 }
 
 .mobile-list {
@@ -61,9 +65,24 @@ a {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    padding: 20px;
     background-color: blueviolet;
   }
+  a{
+    padding: 5% 10%;
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .navbar ul{
+    display: flex;
+  }
+
+  .navbar ul li {
+    display: flex;
+  }
+  
+
   .mobile-list i {
     font-size: 30px;
   }
