--- a/css/profile.css
+++ b/css/profile.css
@@ -3,13 +3,23 @@ body {
 }
 
 #profileTitle {
-  margin: 30px 0px 20px 0px;
+  margin: 20px 0px 10px 0px;
   font-size: 60px;
+  color: rgb(82, 0, 114);
+  border-radius: 50%;
+  padding-top: 10px;
 }
 
 .label {
+  color: whitesmoke;
   margin: 20px;
   font-size: 40px;
+  text-shadow: 0.06em 0.06em black;
+}
+
+#profile-background{
+  background-color: rgba(138, 43, 226, 0.5);
+  margin: 20px 20%;
 }
 
 .ligne{
@@ -35,6 +45,12 @@ body {
 
 
 @media only screen and (max-width: 800px) {
+
+  #profil-background{
+    margin: 10px 2%;
+
+
+  }
   .logout-button {
     margin-bottom: 30px;
   }
@@ -53,6 +69,10 @@ body {
 
 @media only screen and (max-width: 320px) {
 
+  #profile-background{
+    margin: 10px 5%;
+  }
+
   #profileTitle {
     font-size: 40px;
   }
@@ -63,6 +83,8 @@ body {
   }
   .label {
     font-size: 15px;
+    text-shadow: 0.08em 0.08em black;
+
   }
   .ligne{
     margin: 0px;
