--- a/css/profile.css
+++ b/css/profile.css
@@ -6,9 +6,11 @@ body {
 #profileTitle {
   margin: 10px 0px 0px 0px;
   font-size: 3em;
-  color: rgb(82, 0, 114);
+  color: whitesmoke;
   border-radius: 50%;
   padding-top: 10px;
+  text-shadow: 0.06em 0.06em black;
+
 }
 
 .label {
@@ -19,7 +21,7 @@ body {
 }
 
 #profile-background{
-  background-color: rgba(138, 43, 226, 0.5);
+  background-color: rgba(76, 51, 187, 0.5);
   margin: 20px 20%;
 }
 
