--- a/css/profile.css
+++ b/css/profile.css
@@ -23,6 +23,7 @@ body {
 #profile-background{
   background-color: rgba(76, 51, 187, 0.5);
   margin: 20px 20%;
+  padding-bottom: 20px;
 }
 
 .ligne{
@@ -78,7 +79,7 @@ body {
 @media only screen and (max-width: 320px) {
 
   #profile-background{
-    margin: 20px 5%;
+    margin: 0px 5% 20px ;
   }
 
   #profileTitle {
