fix bug + mute on and off

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -65,7 +65,7 @@ a {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    background-color: blueviolet;
+    background-color: #8a2be2;
   }
   a{
     padding: 5% 10%;
