--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body{
 
 .background-index {
   background-size: cover;
+  background-repeat: no-repeat;
   background-color: blueviolet;
   background-image: linear-gradient(
     43deg,
@@ -11,6 +12,7 @@ body{
     blueviolet 46%,
     #ff70f6 100%
   );
+
 }
 
 .small-title {
